# financial-calculator

./: README.md
.github/: dependabot.yml
calc/: .dockerignore  .gitignore  Dockerfile  README.md  _request.sh  black_scholes.py  docker-compose.yml  down.csv  main.py  pyproject.toml  requirements.txt  sideways.csv
calc/data/: up.csv  zerobond.csv
calc/scripts/: _dev.sh  _request.sh
calc/src/: barrier_reverse_convertible.py  black_scholes.py  main.py
web/: package-lock.json  package.json
web/src/: App.tsx  Navbar.tsx  react-app-env.d.ts  theme.ts
web/src/components/: BlackScholes.tsx
web/src/pages/: BarrierReverseConvertible.tsx  BlackScholesWithDividend.tsx
