[tool.poetry]
name = "financial-calculator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Click = "^7.1.2"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"
numpy = "^1.21.1"
scipy = "^1.6.1"
httpie = "^2.4.0"
pandas = "^1.3.1"

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
black = {version = "^21.7b0", allow-prereleases = true}
pytest = "^6.2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
